# mcp-webgate

./: .gitattributes  .gitignore  ADVANCED.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.md  feedback.md
.github/workflows/: ci.yml  publish.yml
docs/: CONTRIBUTING.md
docs/integrations/: AGENT.md  IDE.md
examples/: claude-code-with-llm.mcp.json  claude-code.mcp.json  claude-desktop-with-llm.json  webgate.toml  zed-settings-with-llm.json  zed-settings.json
sample/: README.md  easysearch.py
scripts/: README.md  robot.py  webgate.toml
src/mcp_webgate/: __init__.py  config.py  server.py
src/mcp_webgate/backends/: base.py  brave.py  exa.py  searxng.py  serpapi.py  tavily.py
src/mcp_webgate/llm/: client.py  expander.py  summarizer.py
src/mcp_webgate/scraper/: cleaner.py  fetcher.py
src/mcp_webgate/tools/: fetch.py  query.py
src/mcp_webgate/utils/: logger.py  reranker.py  url.py
src/mcp_xsearch/: __init__.py  config.py  server.py
src/mcp_xsearch/scraper/: cleaner.py  fetcher.py
src/mcp_xsearch/tools/: fetch.py  query.py
src/mcp_xsearch/utils/: url.py
tests/: test_backends.py  test_cleaner.py  test_config.py  test_debug_logger.py  test_fetch_tool.py  test_fetcher.py  test_integration_llm.py  test_integration_searxng.py  test_llm.py  test_query.py  test_url.py
