[project]
name = "mcp-xsearch"
version = "0.1.5"
description = "Denoised web search MCP server with context flooding protection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Hannibal", email = "annibale.x@gmail.com" }]
keywords = ["mcp", "search", "web", "llm", "claude", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "lxml>=5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]

[project.urls]
Homepage = "https://github.com/annibale-x/mcp-xsearch"
Repository = "https://github.com/annibale-x/mcp-xsearch"
Issues = "https://github.com/annibale-x/mcp-xsearch/issues"
Changelog = "https://github.com/annibale-x/mcp-xsearch/blob/main/CHANGELOG.md"

[project.scripts]
mcp-xsearch = "mcp_xsearch.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_xsearch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
