[project]
name = "mcp-webgate"
version = "0.1.29"
description = "Web search that doesn't wreck your AI's memory."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Hannibal", email = "annibale.x@gmail.com" }]
keywords = ["mcp", "search", "web", "llm", "context"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing :: Filters",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "lxml>=5.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/annibale-x/mcp-webgate"
Repository = "https://github.com/annibale-x/mcp-webgate"
Issues = "https://github.com/annibale-x/mcp-webgate/issues"
Changelog = "https://github.com/annibale-x/mcp-webgate/blob/main/CHANGELOG.md"

[project.scripts]
mcp-webgate = "mcp_webgate.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_webgate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # Python 3.11 + unittest.mock.AsyncMock creates internal _execute_mock_call
    # coroutines during mock setup that are never awaited. This is a known CPython
    # issue (https://github.com/python/cpython/issues/91610) unrelated to test logic.
    # Caught both as normal warnings (from unittest.mock) and as unraisable exceptions
    # (from gc.collect() during pytest teardown).
    "ignore::RuntimeWarning:unittest.mock",
    "ignore:coroutine '.*' was never awaited:RuntimeWarning",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "twine>=5.0"]
